# SA-JEPA

./: .gitignore  LICENSE  README.md  REASONIX.md  extract_rank_gen_17.sh  generate_summary.py  main.py  multiscale_jepa_clean_highlighted.aux  multiscale_jepa_clean_highlighted.fdb_latexmk  multiscale_jepa_clean_highlighted.fls  multiscale_jepa_clean_highlighted.out  notes  pyproject.toml  requirements.txt  run.sh  run_all.sh  run_all_session_plots.sh  run_movie.sh  session_to_dash.sh  session_to_movie.sh  train_jepa.py  typescript  update_gen_17.sh  w
.deepseek/: instructions.md
.mplconfig/: fontlist-v390.json
.run_all_overrides/: gen_29_2d_c12_mfae_priority10_cdd_scaleaware.json
configs/: README.md  base_pyramid_scaleaware_convnext.json  base_pyramid_scaleaware_convnext.yaml  base_pyramid_scaleaware_convnext_bk.json  full_run_gaussian_dip_weak_enhanced.json  full_run_gaussian_dip_weak_enhanced_normfalse.json  gen_1.json  gen_11_convnextdense_predln_ema_only.json  gen_12_convnextdense_predln_boundary_ema_only.json  gen_12_denseunetsmall_predln_ema_only.json  gen_13_fullres_predln_boundary_ema_only.json  gen_13_rescnndense_predln_boundary_ema_only.json  gen_14_convnextdense_predln_boundary_ema_only_box.json  gen_14_convnextdense_predln_boundary_ema_only_gaussiandip.json  gen_14_denseunetsmall_predln_boundary_ema_only.json  gen_14_denseunetsmall_predln_boundary_ema_only_box.json  gen_14_denseunetsmall_predln_boundary_ema_only_gaussiandip.json  gen_14_fullres_predln_boundary_ema_only_box.json  gen_14_fullres_predln_boundary_ema_only_gaussiandip.json  (+134 more)
src/: __init__.py  (+11 more)
(+1574 files in other folders)
